[gd_scene load_steps=17 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Prototype Stage/gameObjects/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Prototype Stage/prototype/Collectables.gd" type="Script" id=3]
[ext_resource path="res://Prototype Stage/prototype/LevelScript.gd" type="Script" id=4]
[ext_resource path="res://Prototype Stage/prototype/DoorScript.gd" type="Script" id=5]
[ext_resource path="res://assets/images/png/Bag_Prototype.png" type="Texture" id=6]
[ext_resource path="res://assets/images/png/BagSlot_Prototype.png" type="Texture" id=7]
[ext_resource path="res://Prototype Stage/prototype/Slot.gd" type="Script" id=8]
[ext_resource path="res://Prototype Stage/prototype/Inventory.gd" type="Script" id=9]
[ext_resource path="res://Prototype Stage/prototype/GameArea.gd" type="Script" id=10]
[ext_resource path="res://Prototype Stage/assets/images/png/Level_1_BG.png" type="Texture" id=11]

[sub_resource type="TileSet" id=6]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 8 )

[sub_resource type="CircleShape2D" id=3]
radius = 7.0

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 8, 8 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 32, 32 )

[node name="Prototype" type="Node2D"]
script = ExtResource( 4 )

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = -768.0
margin_top = -384.0
margin_right = 1408.0
margin_bottom = 768.0
texture = ExtResource( 11 )
stretch_mode = 2

[node name="GameArea" type="Node2D" parent="."]
position = Vector2( 128, 32 )
script = ExtResource( 10 )

[node name="PuzzlePhase" type="Node2D" parent="GameArea"]
scale = Vector2( 1.5, 1.5 )

[node name="TileMap" type="TileMap" parent="GameArea/PuzzlePhase"]
position = Vector2( -128, -32 )
tile_set = SubResource( 6 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 0, 0, 0, 0, 0, 0 )
cell_y_sort = true
format = 1

[node name="Wall" type="StaticBody2D" parent="GameArea/PuzzlePhase/TileMap"]
position = Vector2( 144, 96 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="GameArea/PuzzlePhase/TileMap/Wall"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameArea/PuzzlePhase/TileMap/Wall"]
position = Vector2( 8, 8 )
shape = SubResource( 2 )

[node name="Wall8" type="StaticBody2D" parent="GameArea/PuzzlePhase/TileMap"]
position = Vector2( 128, 80 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="GameArea/PuzzlePhase/TileMap/Wall8"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameArea/PuzzlePhase/TileMap/Wall8"]
position = Vector2( 8, 8 )
shape = SubResource( 2 )

[node name="Wall5" type="StaticBody2D" parent="GameArea/PuzzlePhase/TileMap"]
position = Vector2( 128, 48 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="GameArea/PuzzlePhase/TileMap/Wall5"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameArea/PuzzlePhase/TileMap/Wall5"]
position = Vector2( 8, 8 )
shape = SubResource( 2 )

[node name="Wall7" type="StaticBody2D" parent="GameArea/PuzzlePhase/TileMap"]
position = Vector2( 144, 32 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="GameArea/PuzzlePhase/TileMap/Wall7"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameArea/PuzzlePhase/TileMap/Wall7"]
position = Vector2( 8, 8 )
shape = SubResource( 2 )

[node name="Wall4" type="StaticBody2D" parent="GameArea/PuzzlePhase/TileMap"]
position = Vector2( 375.333, 80 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="GameArea/PuzzlePhase/TileMap/Wall4"]
modulate = Color( 0, 0, 0, 1 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameArea/PuzzlePhase/TileMap/Wall4"]
position = Vector2( 8, 8 )
shape = SubResource( 2 )

[node name="Wall2" type="StaticBody2D" parent="GameArea/PuzzlePhase/TileMap"]
position = Vector2( 375.333, 48 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="GameArea/PuzzlePhase/TileMap/Wall2"]
modulate = Color( 0, 0, 0, 1 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameArea/PuzzlePhase/TileMap/Wall2"]
position = Vector2( 8, 8 )
shape = SubResource( 2 )

[node name="Wall6" type="StaticBody2D" parent="GameArea/PuzzlePhase/TileMap"]
position = Vector2( 359.333, 32 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="GameArea/PuzzlePhase/TileMap/Wall6"]
modulate = Color( 0, 0, 0, 1 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameArea/PuzzlePhase/TileMap/Wall6"]
position = Vector2( 8, 8 )
shape = SubResource( 2 )

[node name="Wall3" type="StaticBody2D" parent="GameArea/PuzzlePhase/TileMap"]
position = Vector2( 224, 176 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="GameArea/PuzzlePhase/TileMap/Wall3"]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameArea/PuzzlePhase/TileMap/Wall3"]
position = Vector2( 8, 8 )
shape = SubResource( 2 )

[node name="Collectibles" type="Area2D" parent="GameArea/PuzzlePhase/TileMap"]
position = Vector2( 144, 48 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}
itemName = "item_1"
itemQuantity = 1

[node name="Sprite" type="Sprite" parent="GameArea/PuzzlePhase/TileMap/Collectibles"]
modulate = Color( 1, 0.870588, 0.290196, 1 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameArea/PuzzlePhase/TileMap/Collectibles"]
position = Vector2( 8, 8 )
shape = SubResource( 3 )

[node name="Collectibles2" type="Area2D" parent="GameArea/PuzzlePhase/TileMap"]
position = Vector2( 144, 80 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}
itemName = "item_2"
itemQuantity = 1

[node name="Sprite" type="Sprite" parent="GameArea/PuzzlePhase/TileMap/Collectibles2"]
modulate = Color( 1, 0.870588, 0.290196, 1 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameArea/PuzzlePhase/TileMap/Collectibles2"]
position = Vector2( 8, 8 )
shape = SubResource( 3 )

[node name="Collectibles3" type="Area2D" parent="GameArea/PuzzlePhase/TileMap"]
position = Vector2( 359.333, 80 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}
itemName = "item_3"
itemQuantity = 1

[node name="Sprite" type="Sprite" parent="GameArea/PuzzlePhase/TileMap/Collectibles3"]
modulate = Color( 1, 0.870588, 0.290196, 1 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameArea/PuzzlePhase/TileMap/Collectibles3"]
position = Vector2( 8, 8 )
shape = SubResource( 3 )

[node name="Door" type="Area2D" parent="GameArea/PuzzlePhase/TileMap"]
position = Vector2( 224, 160 )
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="GameArea/PuzzlePhase/TileMap/Door"]
modulate = Color( 0.0666667, 0, 0.643137, 1 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameArea/PuzzlePhase/TileMap/Door"]
position = Vector2( 8, 8 )
shape = SubResource( 4 )

[node name="Player" parent="GameArea/PuzzlePhase" instance=ExtResource( 2 )]
position = Vector2( 231.333, 16 )

[node name="ScrollPhase" type="Node2D" parent="GameArea"]
visible = false

[node name="Control" type="Control" parent="GameArea/ScrollPhase"]
margin_left = -80.0
margin_top = -16.0
margin_right = 496.0
margin_bottom = 320.0

[node name="Panel" type="Panel" parent="GameArea/ScrollPhase/Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Inventory" type="Node2D" parent="."]
position = Vector2( 16, 16 )
script = ExtResource( 9 )

[node name="TextureRect" type="TextureRect" parent="Inventory"]
anchor_bottom = 1.0
texture = ExtResource( 6 )

[node name="GridContainer" type="GridContainer" parent="Inventory"]
anchor_bottom = 1.0
margin_top = 32.0
margin_right = 32.0
margin_bottom = 64.0
custom_constants/vseparation = 0
__meta__ = {
"_edit_group_": true
}

[node name="Panel" type="Panel" parent="Inventory/GridContainer"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 5 )
script = ExtResource( 8 )

[node name="Panel2" type="Panel" parent="Inventory/GridContainer"]
margin_top = 32.0
margin_right = 32.0
margin_bottom = 64.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 5 )
script = ExtResource( 8 )

[node name="Panel3" type="Panel" parent="Inventory/GridContainer"]
margin_top = 64.0
margin_right = 32.0
margin_bottom = 96.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 5 )
script = ExtResource( 8 )

[node name="Panel4" type="Panel" parent="Inventory/GridContainer"]
margin_top = 96.0
margin_right = 32.0
margin_bottom = 128.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 5 )
script = ExtResource( 8 )

[node name="Panel5" type="Panel" parent="Inventory/GridContainer"]
margin_top = 128.0
margin_right = 32.0
margin_bottom = 160.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 5 )
script = ExtResource( 8 )

[node name="Panel6" type="Panel" parent="Inventory/GridContainer"]
margin_top = 160.0
margin_right = 32.0
margin_bottom = 192.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 5 )
script = ExtResource( 8 )

[node name="Panel7" type="Panel" parent="Inventory/GridContainer"]
margin_top = 192.0
margin_right = 32.0
margin_bottom = 224.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 5 )
script = ExtResource( 8 )

[node name="Panel8" type="Panel" parent="Inventory/GridContainer"]
margin_top = 224.0
margin_right = 32.0
margin_bottom = 256.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 5 )
script = ExtResource( 8 )

[node name="Panel9" type="Panel" parent="Inventory/GridContainer"]
margin_top = 256.0
margin_right = 32.0
margin_bottom = 288.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 5 )
script = ExtResource( 8 )

[node name="Panel10" type="Panel" parent="Inventory/GridContainer"]
margin_top = 288.0
margin_right = 32.0
margin_bottom = 320.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 5 )
script = ExtResource( 8 )

[connection signal="inventorySignal" from="." to="Inventory" method="_on_Prototype_inventorySignal"]
[connection signal="body_entered" from="GameArea/PuzzlePhase/TileMap/Collectibles" to="GameArea/PuzzlePhase/TileMap/Collectibles" method="_on_Collectibles_body_entered"]
[connection signal="keyCollected" from="GameArea/PuzzlePhase/TileMap/Collectibles" to="." method="_on_Collectibles_keyCollected"]
[connection signal="keyCollected" from="GameArea/PuzzlePhase/TileMap/Collectibles" to="GameArea/PuzzlePhase/TileMap/Door" method="_on_Collectibles_keyCollected"]
[connection signal="body_entered" from="GameArea/PuzzlePhase/TileMap/Collectibles2" to="GameArea/PuzzlePhase/TileMap/Collectibles2" method="_on_Collectibles_body_entered"]
[connection signal="keyCollected" from="GameArea/PuzzlePhase/TileMap/Collectibles2" to="." method="_on_Collectibles_keyCollected"]
[connection signal="keyCollected" from="GameArea/PuzzlePhase/TileMap/Collectibles2" to="GameArea/PuzzlePhase/TileMap/Door" method="_on_Collectibles_keyCollected"]
[connection signal="body_entered" from="GameArea/PuzzlePhase/TileMap/Collectibles3" to="GameArea/PuzzlePhase/TileMap/Collectibles3" method="_on_Collectibles_body_entered"]
[connection signal="keyCollected" from="GameArea/PuzzlePhase/TileMap/Collectibles3" to="." method="_on_Collectibles_keyCollected"]
[connection signal="keyCollected" from="GameArea/PuzzlePhase/TileMap/Collectibles3" to="GameArea/PuzzlePhase/TileMap/Door" method="_on_Collectibles_keyCollected"]
[connection signal="PuzzlePhaseComplete" from="GameArea/PuzzlePhase/TileMap/Door" to="GameArea" method="_on_Door_PuzzlePhaseComplete"]
[connection signal="body_entered" from="GameArea/PuzzlePhase/TileMap/Door" to="GameArea/PuzzlePhase/TileMap/Door" method="_on_Door_body_entered"]
[connection signal="addItemToSlot" from="Inventory" to="." method="_on_Inventory_addItemToSlot"]
[connection signal="removeItem" from="Inventory" to="." method="_on_Inventory_removeItem"]
